# VehicleDynamics

./: CMakeLists.txt  README.md
examples/: demo_vehicle_state_estimation.cpp
include/vehicledynamics/: kalman_filter.hpp  matrix.hpp  vehicle_state_estimator.hpp
src/: kalman_filter.cpp  vehicle_state_estimator.cpp
tests/: test_kalman_filter.cpp  test_main.cpp  test_matrix.cpp  test_util.hpp
